# lvmscp_old_version

./: .gitignore  .python-version  .travis.yml  CHANGELOG.md  CHANGELOG.rst  CODEOWNERS  Dockerfile  README.md  README.rst  pyproject.toml  setup.py
.github/workflows/: Docker.yml  release.yml  test.yml
SCP/: scp_actor.py
docs/sph/: Archon.rst  OSU.rst  README.rst  SCP.rst  conf.py
docs/sph/_build/doctrees/: Archon.doctree  CHANGELOG.doctree  NPS.doctree  OSU.doctree  README.doctree  SCP.doctree  api.doctree  environment.pickle  getting-started.doctree  index.doctree  testing.doctree
docs/sph/_build/html/: .buildinfo  Archon.html  CHANGELOG.html  NPS.html  OSU.html  README.html  SCP.html  api.html  genindex.html  getting-started.html  index.html  objects.inv  search.html  searchindex.js  testing.html
docs/sphinx/: Archon.rst  Examples.rst  README.rst  api.rst  archon.rst  changelog.rst  commands.rst  conf.py  getting-started.rst  index.rst  intro.rst  lvmieb.rst  lvmnps.rst  lvmscp.rst  requirements.txt  testing.rst
docs/sphinx/_build/doctrees/: Archon.doctree  CHANGELOG.doctree  NPS.doctree  OSU.doctree  README.doctree  SCP.doctree  api.doctree  changelog.doctree  environment.pickle  getting-started.doctree  index.doctree  testing.doctree
docs/sphinx/_build/html/: .buildinfo  Archon.html  CHANGELOG.html  NPS.html  OSU.html  README.html  SCP.html  api.html  changelog.html  genindex.html  getting-started.html  index.html  objects.inv  search.html  searchindex.js  testing.html
docs/sphinx/module/: conf.py  scp.actor.actor.rst
docs/test/source/: conf.py  scp.actor.actor.rst  scp.actor.commands.engineering.rst  scp.actor.rst  scp.display.rst  scp.exceptions.rst
python/: SCP
python/lvmscp/: __init__.py  __main__.py  display.py  exceptions.py  module.py  test.py
python/lvmscp/actor/: __init__.py  actor.py  supervisor.py
python/lvmscp/actor/commands/: __init__.py  engineering.py  expdark.py  exposure.py  focus.py  gage.py  hartmann.py  labtemp.py  readout.py  status.py  talk.py
python/lvmscp/etc/: lvmscp.yml  schema.json
python/scp/: __init__.py  __main__.py  devices.py  display.py  exceptions.py  scp_actor.py
python/scp/actor/: __init__.py  actor.py  scp_actor.py
python/scp/etc/: SCP.yml  scp.yml
python/scpactor/: __init__.py  __main__.py
python/scpactor/actor/: __init__.py  actor.py
python/scpactor/etc/: scpactor.yml
tests/: conftest.py  coverage.xml  test_actor.py  test_archon.yml  test_lvmieb.yml  test_lvmnps.yml  test_main.py  test_status.py
(+77 files in other folders)
